# node-nfc-nci

./: .npmignore  CMakeLists.txt  README.md  index.js  package-lock.json  package.json  test.js
.devcontainer/: Dockerfile  devcontainer.json
src/: device.cpp  device.h  mutex.cpp  mutex.h  nodeinterface.cpp  nodeinterface.h  tag.cpp  tag.h  tag_serialize.cpp  tag_serialize.h  tagmanager.cpp  tagmanager.h
